--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     </div>
   </div>
 
+  <script type="text/javascript" src="js/core.js"></script>
   <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
