Some home screen stuff

--- a/index.html
+++ b/index.html
@@ -11,29 +11,42 @@
 
   <div id="iphone">
     <div class="views">
-      <div id="view-1">
-        <div id="view-1-add"></div>
-        <div id="view-1-reminders"></div>
+      <!-- Home -->
+      <div id="home">
+        <div id="home-estimate-toggle"></div>
+        <div id="home-add-button"></div>
+        <div id="home-instructions-button"></div>
+        <div id="home-menu-button"></div>
+        <div id="home-trends-button"></div>
       </div>
-      <div id="view-2">
-        <div id="view-2-add-blood"></div>
-        <div id="view-2-add-food"></div>
-        <div id="view-2-add-exercise"></div>
+
+      <div id="home-estimate">
+        <div id="home-estimate-back"></div>
       </div>
-      <div id="view-3">
-        <div class="input-action" id="view-3-cancel"></div>
-        <div class="input-action" id="view-3-done"></div>
+
+      <div id="home-add">
+        <div id="home-add-close"></div>
+        <div id="home-add-glucose"></div>
+        <div id="home-add-meal"></div>
+        <div id="home-add-exercise"></div>
       </div>
-      <div id="view-4">
-        <div class="input-action" id="view-4-cancel"></div>
-        <div class="input-action" id="view-4-done"></div>
+
+      <div id="home-instructions">
+        <div id="home-instructions-close"></div>
       </div>
-      <div id="view-5">
-        <div class="input-action" id="view-5-cancel"></div>
-        <div class="input-action" id="view-5-done"></div>
+
+      <div id="home-menu">
+        <div id="home-menu-settings"></div>
+        <div id="home-menu-reminders"></div>
+        <div id="home-menu-passcode"></div>
+        <div id="home-menu-cancel"></div>
       </div>
-      <div id="view-6">
-        <div id="view-6-glucose"></div>
+
+      <div id="home-trends">
+        <div id="home-trends-close"></div>
+        <div id="home-trends-glucose"></div>
+        <div id="home-trends-food"></div>
+        <div id="home-trends-exercise"></div>
       </div>
     </div>
   </div>
