WHOLE BUNCHA STUFF

--- a/index.html
+++ b/index.html
@@ -48,6 +48,18 @@
         <div id="home-trends-food"></div>
         <div id="home-trends-exercise"></div>
       </div>
+
+
+      <!-- Passcode -->
+      <div id="passcode">
+        <div id="passcode-back"></div>
+      </div>
+
+
+      <!-- Settings -->
+      <div id="settings">
+        <div id="settings-back"></div>
+      </div>
     </div>
   </div>
 
