Some data entry pages

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
   <div id="iphone">
     <div class="views">
+      <p>9:21 AM</p>
       <!-- Home -->
       <div id="home">
         <div id="home-estimate-toggle"></div>
@@ -59,6 +60,35 @@
       <!-- Settings -->
       <div id="settings">
         <div id="settings-back"></div>
+      </div>
+
+
+      <!-- Input: glucose -->
+      <div id="input-glucose">
+        <div id="input-glucose-back"></div>
+        <div class="input-action" id="input-glucose-cancel"></div>
+        <div class="input-action" id="input-glucose-done"></div>
+      </div>
+
+
+      <!-- Input: food -->
+      <div id="input-food">
+        <div id="input-food-back"></div>
+        <div class="input-action" id="input-food-cancel"></div>
+        <div class="input-action" id="input-food-done"></div>
+      </div>
+
+
+      <!-- Input: exercise -->
+      <div id="input-exercise">
+        <div id="input-exercise-back"></div>
+        <div id="input-exercise-options-dropdown"></div>
+        <div class="input-action" id="input-exercise-cancel"></div>
+        <div class="input-action" id="input-exercise-done"></div>
+      </div>
+
+      <div id="input-exercise-options">
+        <div id="input-exercise-running"></div>
       </div>
     </div>
   </div>
