Date and time pickers for data input

--- a/index.html
+++ b/index.html
@@ -66,16 +66,36 @@
       <!-- Input: glucose -->
       <div id="input-glucose">
         <div id="input-glucose-back"></div>
+        <div class="input-datetime" id="input-glucose-time-button"></div>
+        <div class="input-datetime" id="input-glucose-date-button"></div>
         <div class="input-action" id="input-glucose-cancel"></div>
         <div class="input-action" id="input-glucose-done"></div>
+      </div>
+
+      <div id="input-glucose-time">
+        <div class="input-dialog-done" id="input-glucose-time-done"></div>
+      </div>
+
+      <div id="input-glucose-date">
+        <div class="input-dialog-done" id="input-glucose-date-done"></div>
       </div>
 
 
       <!-- Input: food -->
       <div id="input-food">
         <div id="input-food-back"></div>
+        <div class="input-datetime" id="input-food-time-button"></div>
+        <div class="input-datetime" id="input-food-date-button"></div>
         <div class="input-action" id="input-food-cancel"></div>
         <div class="input-action" id="input-food-done"></div>
+      </div>
+
+      <div id="input-food-time">
+        <div class="input-dialog-done" id="input-food-time-done"></div>
+      </div>
+
+      <div id="input-food-date">
+        <div class="input-dialog-done" id="input-food-date-done"></div>
       </div>
 
 
@@ -83,12 +103,22 @@
       <div id="input-exercise">
         <div id="input-exercise-back"></div>
         <div id="input-exercise-options-dropdown"></div>
+        <div class="input-datetime" id="input-exercise-time-button"></div>
+        <div class="input-datetime" id="input-exercise-date-button"></div>
         <div class="input-action" id="input-exercise-cancel"></div>
         <div class="input-action" id="input-exercise-done"></div>
       </div>
 
       <div id="input-exercise-options">
         <div id="input-exercise-running"></div>
+      </div>
+
+      <div id="input-exercise-time">
+        <div class="input-dialog-done" id="input-exercise-time-done"></div>
+      </div>
+
+      <div id="input-exercise-date">
+        <div class="input-dialog-done" id="input-exercise-date-done"></div>
       </div>
     </div>
   </div>
