--- a/index.html
+++ b/index.html
@@ -12,6 +12,36 @@
   <div id="iphone">
     <div class="views">
       <p>9:21 AM</p>
+      <!-- Tutorial -->
+      <div id="tutorial-intro">
+        <div id="tutorial-intro-app"></div>
+        <div id="tutorial-intro-input"></div>
+        <div id="tutorial-intro-reminders"></div>
+        <div id="tutorial-intro-progress"></div>
+        <div class="tutorial-skip" id="tutorial-intro-skip"></div>
+      </div>
+
+      <div id="tutorial-app">
+        <div class="tutorial-next" id="tutorial-app-next"></div>
+        <div class="tutorial-skip" id="tutorial-app-exit"></div>
+      </div>
+
+      <div id="tutorial-input">
+        <div class="tutorial-next" id="tutorial-input-next"></div>
+        <div class="tutorial-skip" id="tutorial-input-exit"></div>
+      </div>
+
+      <div id="tutorial-reminders">
+        <div class="tutorial-next" id="tutorial-reminders-next"></div>
+        <div class="tutorial-skip" id="tutorial-reminders-exit"></div>
+      </div>
+
+      <div id="tutorial-progress">
+        <div class="tutorial-next" id="tutorial-progress-next"></div>
+        <div class="tutorial-skip" id="tutorial-progress-exit"></div>
+      </div>
+
+
       <!-- Home -->
       <div id="home">
         <div id="home-estimate-toggle"></div>
