--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <div id="iphone">
     <div class="views">
       <p>9:21 AM</p>
+
       <!-- Tutorial -->
       <div id="tutorial-intro">
         <div id="tutorial-intro-app"></div>
@@ -149,6 +150,27 @@
 
       <div id="input-exercise-date">
         <div class="input-dialog-done" id="input-exercise-date-done"></div>
+      </div>
+
+      <!-- Reminders -->
+      <div id="reminders">
+        <div id="reminders-back"></div>
+        <div id="reminder-example"></div>
+      </div>
+
+      <div id="reminder-details">
+        <div id="reminder-details-back"></div>
+        <div id="reminder-details-settings"></div>
+      </div>
+
+      <div id="reminder-details-repeat">
+        <div id="reminder-details-repeat-close"></div>
+        <div id="reminder-details-repeat-time"></div>
+      </div>
+
+      <div id="reminder-details-time">
+        <div id="reminder-details-time-close"></div>
+        <div id="reminder-details-time-repeat"></div>
       </div>
     </div>
   </div>
