--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>CSC318 Phase 5</title>
+  <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-  <h1>CSC318 Phase 5</h1>
+  <h1>CSC318 Phase 5: Minimally Interactive Mockup</h1>
   <h2>Nicholas Goh, Zhengnan (Windy) Wang, Eugene Yue-Hin Cheung, Akira Kakkar</h2>
 
   <div id="iphone">
