--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
 
       <!-- Passcode -->
       <div id="passcode">
-        <div id="passcode-back"></div>
+        <div class="back" id="passcode-back"></div>
       </div>
 
 
       <!-- Settings -->
       <div id="settings">
-        <div id="settings-back"></div>
+        <div class="back" id="settings-back"></div>
       </div>
 
 
@@ -154,13 +154,30 @@
       </div>
 
       <!-- Reminders -->
+      <div id="reminders-day">
+        <div class="back" id="reminders-day-back"></div>
+        <div id="reminders-month-tab"></div>
+        <div id="reminder-edit"></div>
+        <div id="reminders-day-add"></div>
+      </div>
+
+      <div id="reminders-month">
+        <div class="back" id="reminders-month-back"></div>
+        <div id="reminders-day-tab"></div>
+        <div id="reminders-month-add"></div>
+      </div>
+
+      <div id="reminders-add">
+        <div class="back" id="reminders-add-back"></div>
+      </div>
+
       <div id="reminders">
-        <div id="reminders-back"></div>
+        <div class="back" id="reminders-back"></div>
         <div id="reminder-example"></div>
       </div>
 
       <div id="reminder-details">
-        <div id="reminder-details-back"></div>
+        <div class="back" id="reminder-details-back"></div>
         <div id="reminder-details-settings"></div>
       </div>
 
