--- a/index.html
+++ b/index.html
@@ -83,6 +83,13 @@
       </div>
 
 
+      <!-- Trends -->
+      <div id="glucose-trends">
+        <div id="glucose-trends-close-top"></div>
+        <div id="glucose-trends-close-bottom"></div>
+      </div>
+
+
       <!-- Passcode -->
       <div id="passcode">
         <div class="back" id="passcode-back"></div>
