--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
       </div>
 
       <div id="reminders-add">
+        <div id="reminders-add-medicine"></div>
         <div class="back" id="reminders-add-back"></div>
       </div>
 
