Update code for new home and meal views

--- a/index.html
+++ b/index.html
@@ -47,10 +47,13 @@
       <!-- Home -->
       <div id="home">
         <div id="home-add-button"></div>
+        <div id="home-menu-settings"></div>
+        <div id="home-menu-reminders"></div>
         <div id="home-instructions-button"></div>
         <div id="home-menu-button"></div>
         <div id="home-trends-button"></div>
       </div>
+
       <div id="home-add">
         <div id="home-add-close"></div>
         <div id="home-add-glucose"></div>
@@ -60,12 +63,6 @@
 
       <div id="home-instructions">
         <div id="home-instructions-close"></div>
-      </div>
-
-      <div id="home-menu">
-        <div id="home-menu-settings"></div>
-        <div id="home-menu-reminders"></div>
-        <div id="home-menu-cancel"></div>
       </div>
 
 
@@ -84,7 +81,7 @@
 
       <!-- Input: glucose -->
       <div id="input-glucose">
-        <div id="input-glucose-back"></div>
+        <div class="back" id="input-glucose-back"></div>
         <div class="input-datetime" id="input-glucose-time-button"></div>
         <div class="input-datetime" id="input-glucose-date-button"></div>
         <div class="input-action" id="input-glucose-cancel"></div>
@@ -102,7 +99,7 @@
 
       <!-- Input: food -->
       <div id="input-food">
-        <div id="input-food-back"></div>
+        <div class="back" id="input-food-back"></div>
         <div class="input-datetime" id="input-food-time-button"></div>
         <div class="input-datetime" id="input-food-date-button"></div>
         <div class="input-action" id="input-food-cancel"></div>
@@ -120,7 +117,7 @@
 
       <!-- Input: exercise -->
       <div id="input-exercise">
-        <div id="input-exercise-back"></div>
+        <div class="back" id="input-exercise-back"></div>
         <div id="input-exercise-options-dropdown"></div>
         <div class="input-datetime" id="input-exercise-time-button"></div>
         <div class="input-datetime" id="input-exercise-date-button"></div>
