Food photo camera view

--- a/index.html
+++ b/index.html
@@ -100,10 +100,15 @@
       <!-- Input: food -->
       <div id="input-food">
         <div class="back" id="input-food-back"></div>
+        <div id="input-food-photo-button"></div>
         <div class="input-datetime" id="input-food-time-button"></div>
         <div class="input-datetime" id="input-food-date-button"></div>
         <div class="input-action" id="input-food-cancel"></div>
         <div class="input-action" id="input-food-done"></div>
+      </div>
+
+      <div id="input-food-photo">
+        <div id="input-food-photo-back"></div>
       </div>
 
       <div id="input-food-time">
