Update reminders view and remove menu images

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 
       <div id="home-instructions">
         <div id="home-instructions-close"></div>
+        <div id="home-instructions-tutorial"></div>
       </div>
 
 
@@ -146,8 +147,13 @@
       <div id="reminders-day">
         <div class="back" id="reminders-day-back"></div>
         <div id="reminders-month-tab"></div>
+        <div id="reminder-day-time-1030"></div>
         <div id="reminder-edit"></div>
         <div id="reminders-day-add"></div>
+      </div>
+
+      <div id="reminders-day-alt">
+        <div id="reminder-day-time-5"></div>
       </div>
 
       <div id="reminders-month">
