Tutorial/trends work

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>CSC318 Phase 4</title>
+  <title>CSC318 Phase 5: Interactive Mockup</title>
   <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-  <h1>CSC318 Phase 4: Minimally Interactive Mockup</h1>
+  <h1>CSC318 Phase 5: Interactive Mockup</h1>
   <h2>Nicholas Goh, Zhengnan (Windy) Wang, Eugene Yue-Hin Cheung, Akira Kakkar</h2>
 
   <div id="iphone">
@@ -15,34 +15,69 @@
       <p>9:21 AM</p>
 
       <!-- Tutorial -->
-      <div id="tutorial-intro">
-        <div id="tutorial-intro-app"></div>
-        <div id="tutorial-intro-input"></div>
-        <div id="tutorial-intro-reminders"></div>
-        <div id="tutorial-intro-progress"></div>
-        <div class="tutorial-skip" id="tutorial-intro-skip"></div>
+      <div id="tutorial-1">
+        <div class="tutorial-next" id="tutorial-1-next"></div>
+        <div class="tutorial-exit"></div>
       </div>
 
-      <div id="tutorial-app">
-        <div class="tutorial-next" id="tutorial-app-next"></div>
-        <div class="tutorial-skip" id="tutorial-app-exit"></div>
+      <div id="tutorial-2">
+        <div class="tutorial-next" id="tutorial-2-next"></div>
+        <div class="tutorial-exit"></div>
       </div>
 
-      <div id="tutorial-input">
-        <div class="tutorial-next" id="tutorial-input-next"></div>
-        <div class="tutorial-skip" id="tutorial-input-exit"></div>
+      <div id="tutorial-3">
+        <div class="tutorial-next" id="tutorial-3-next"></div>
+        <div class="tutorial-exit"></div>
       </div>
 
-      <div id="tutorial-reminders">
-        <div class="tutorial-next" id="tutorial-reminders-next"></div>
-        <div class="tutorial-skip" id="tutorial-reminders-exit"></div>
+      <div id="tutorial-4">
+        <div class="tutorial-next" id="tutorial-4-next"></div>
+        <div class="tutorial-exit"></div>
       </div>
 
-      <div id="tutorial-progress">
-        <div class="tutorial-next" id="tutorial-progress-next"></div>
-        <div class="tutorial-skip" id="tutorial-progress-exit"></div>
+      <div id="tutorial-5">
+        <div class="tutorial-next" id="tutorial-5-next"></div>
+        <div class="tutorial-exit"></div>
       </div>
 
+      <div id="tutorial-6">
+        <div class="tutorial-next" id="tutorial-6-next"></div>
+        <div class="tutorial-exit"></div>
+      </div>
+
+      <div id="tutorial-7">
+        <div class="tutorial-next" id="tutorial-7-next"></div>
+        <div class="tutorial-exit"></div>
+      </div>
+
+      <div id="tutorial-8">
+        <div class="tutorial-next" id="tutorial-8-next"></div>
+        <div class="tutorial-exit"></div>
+      </div>
+
+      <div id="tutorial-9">
+        <div class="tutorial-next" id="tutorial-9-next"></div>
+        <div class="tutorial-exit"></div>
+      </div>
+
+      <div id="tutorial-10">
+        <div class="tutorial-next" id="tutorial-10-next"></div>
+        <div class="tutorial-exit" id="tutorial-10-exit"></div>
+      </div>
+
+      <div id="tutorial-11">
+        <div class="tutorial-next" id="tutorial-11-next"></div>
+        <div class="tutorial-exit" id="tutorial-11-exit"></div>
+      </div>
+
+      <div id="tutorial-12">
+        <div class="tutorial-next" id="tutorial-12-next"></div>
+        <div class="tutorial-exit" id="tutorial-12-exit"></div>
+      </div>
+
+      <div id="tutorial-13">
+        <div class="tutorial-exit"></div>
+      </div>
 
       <!-- Home -->
       <div id="home">
@@ -68,8 +103,7 @@
 
       <!-- Trends -->
       <div id="glucose-trends">
-        <div id="glucose-trends-close-top"></div>
-        <div id="glucose-trends-close-bottom"></div>
+        <div class="back" id="glucose-trends-back"></div>
       </div>
 
 
