Move stuff to phase5 folder

--- a/index.html
+++ b/index.html
@@ -62,17 +62,17 @@
 
       <div id="tutorial-10">
         <div class="tutorial-next" id="tutorial-10-next"></div>
-        <div class="tutorial-exit" id="tutorial-10-exit"></div>
+        <div class="tutorial-exit"></div>
       </div>
 
       <div id="tutorial-11">
         <div class="tutorial-next" id="tutorial-11-next"></div>
-        <div class="tutorial-exit" id="tutorial-11-exit"></div>
+        <div class="tutorial-exit"></div>
       </div>
 
       <div id="tutorial-12">
         <div class="tutorial-next" id="tutorial-12-next"></div>
-        <div class="tutorial-exit" id="tutorial-12-exit"></div>
+        <div class="tutorial-exit"></div>
       </div>
 
       <div id="tutorial-13">
