--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>CSC318 Phase 5: Interactive Mockup</title>
+  <title>CSC318 Phase 4</title>
   <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-  <h1>CSC318 Phase 5: Interactive Mockup</h1>
+  <h1>CSC318 Phase 4: Minimally Interactive Mockup</h1>
   <h2>Nicholas Goh, Zhengnan (Windy) Wang, Eugene Yue-Hin Cheung, Akira Kakkar</h2>
 
   <div id="iphone">
@@ -15,79 +15,42 @@
       <p>9:21 AM</p>
 
       <!-- Tutorial -->
-      <div id="tutorial-1">
-        <div class="tutorial-next" id="tutorial-1-next"></div>
-        <div class="tutorial-exit"></div>
+      <div id="tutorial-intro">
+        <div id="tutorial-intro-app"></div>
+        <div id="tutorial-intro-input"></div>
+        <div id="tutorial-intro-reminders"></div>
+        <div id="tutorial-intro-progress"></div>
+        <div class="tutorial-skip" id="tutorial-intro-skip"></div>
       </div>
 
-      <div id="tutorial-2">
-        <div class="tutorial-next" id="tutorial-2-next"></div>
-        <div class="tutorial-exit"></div>
+      <div id="tutorial-app">
+        <div class="tutorial-next" id="tutorial-app-next"></div>
+        <div class="tutorial-skip" id="tutorial-app-exit"></div>
       </div>
 
-      <div id="tutorial-3">
-        <div class="tutorial-next" id="tutorial-3-next"></div>
-        <div class="tutorial-exit"></div>
+      <div id="tutorial-input">
+        <div class="tutorial-next" id="tutorial-input-next"></div>
+        <div class="tutorial-skip" id="tutorial-input-exit"></div>
       </div>
 
-      <div id="tutorial-4">
-        <div class="tutorial-next" id="tutorial-4-next"></div>
-        <div class="tutorial-exit"></div>
+      <div id="tutorial-reminders">
+        <div class="tutorial-next" id="tutorial-reminders-next"></div>
+        <div class="tutorial-skip" id="tutorial-reminders-exit"></div>
       </div>
 
-      <div id="tutorial-5">
-        <div class="tutorial-next" id="tutorial-5-next"></div>
-        <div class="tutorial-exit"></div>
+      <div id="tutorial-progress">
+        <div class="tutorial-next" id="tutorial-progress-next"></div>
+        <div class="tutorial-skip" id="tutorial-progress-exit"></div>
       </div>
 
-      <div id="tutorial-6">
-        <div class="tutorial-next" id="tutorial-6-next"></div>
-        <div class="tutorial-exit"></div>
-      </div>
-
-      <div id="tutorial-7">
-        <div class="tutorial-next" id="tutorial-7-next"></div>
-        <div class="tutorial-exit"></div>
-      </div>
-
-      <div id="tutorial-8">
-        <div class="tutorial-next" id="tutorial-8-next"></div>
-        <div class="tutorial-exit"></div>
-      </div>
-
-      <div id="tutorial-9">
-        <div class="tutorial-next" id="tutorial-9-next"></div>
-        <div class="tutorial-exit"></div>
-      </div>
-
-      <div id="tutorial-10">
-        <div class="tutorial-next" id="tutorial-10-next"></div>
-        <div class="tutorial-exit"></div>
-      </div>
-
-      <div id="tutorial-11">
-        <div class="tutorial-next" id="tutorial-11-next"></div>
-        <div class="tutorial-exit"></div>
-      </div>
-
-      <div id="tutorial-12">
-        <div class="tutorial-next" id="tutorial-12-next"></div>
-        <div class="tutorial-exit"></div>
-      </div>
-
-      <div id="tutorial-13">
-        <div class="tutorial-exit"></div>
-      </div>
 
       <!-- Home -->
       <div id="home">
         <div id="home-add-button"></div>
-        <div id="home-menu-settings"></div>
-        <div id="home-menu-reminders"></div>
         <div id="home-instructions-button"></div>
+        <div id="home-menu-button"></div>
         <div id="home-trends-button"></div>
       </div>
-
       <div id="home-add">
         <div id="home-add-close"></div>
         <div id="home-add-glucose"></div>
@@ -97,13 +60,19 @@
 
       <div id="home-instructions">
         <div id="home-instructions-close"></div>
-        <div id="home-instructions-tutorial"></div>
+      </div>
+
+      <div id="home-menu">
+        <div id="home-menu-settings"></div>
+        <div id="home-menu-reminders"></div>
+        <div id="home-menu-cancel"></div>
       </div>
 
 
       <!-- Trends -->
       <div id="glucose-trends">
-        <div class="back" id="glucose-trends-back"></div>
+        <div id="glucose-trends-close-top"></div>
+        <div id="glucose-trends-close-bottom"></div>
       </div>
 
 
@@ -115,7 +84,7 @@
 
       <!-- Input: glucose -->
       <div id="input-glucose">
-        <div class="back" id="input-glucose-back"></div>
+        <div id="input-glucose-back"></div>
         <div class="input-datetime" id="input-glucose-time-button"></div>
         <div class="input-datetime" id="input-glucose-date-button"></div>
         <div class="input-action" id="input-glucose-cancel"></div>
@@ -133,16 +102,11 @@
 
       <!-- Input: food -->
       <div id="input-food">
-        <div class="back" id="input-food-back"></div>
-        <div id="input-food-photo-button"></div>
+        <div id="input-food-back"></div>
         <div class="input-datetime" id="input-food-time-button"></div>
         <div class="input-datetime" id="input-food-date-button"></div>
         <div class="input-action" id="input-food-cancel"></div>
         <div class="input-action" id="input-food-done"></div>
-      </div>
-
-      <div id="input-food-photo">
-        <div id="input-food-photo-back"></div>
       </div>
 
       <div id="input-food-time">
@@ -156,7 +120,7 @@
 
       <!-- Input: exercise -->
       <div id="input-exercise">
-        <div class="back" id="input-exercise-back"></div>
+        <div id="input-exercise-back"></div>
         <div id="input-exercise-options-dropdown"></div>
         <div class="input-datetime" id="input-exercise-time-button"></div>
         <div class="input-datetime" id="input-exercise-date-button"></div>
@@ -180,13 +144,8 @@
       <div id="reminders-day">
         <div class="back" id="reminders-day-back"></div>
         <div id="reminders-month-tab"></div>
-        <div id="reminder-day-time-1030"></div>
         <div id="reminder-edit"></div>
         <div id="reminders-day-add"></div>
-      </div>
-
-      <div id="reminders-day-alt">
-        <div id="reminder-day-time-5"></div>
       </div>
 
       <div id="reminders-month">
