--- a/phase5/index.html
+++ b/phase5/index.html
@@ -16,66 +16,222 @@
 
       <!-- Tutorial -->
       <div id="tutorial-1">
+        <div class="tut-skip tut-skip-1"></div>
+        <div class="tut-skip tut-skip-2"></div>
+        <div class="tut-skip tut-skip-3"></div>
+        <div class="tut-skip tut-skip-4"></div>
+        <div class="tut-skip tut-skip-5"></div>
+        <div class="tut-skip tut-skip-6"></div>
+        <div class="tut-skip tut-skip-7"></div>
+        <div class="tut-skip tut-skip-8"></div>
+        <div class="tut-skip tut-skip-9"></div>
+        <div class="tut-skip tut-skip-10"></div>
+        <div class="tut-skip tut-skip-11"></div>
+        <div class="tut-skip tut-skip-12"></div>
         <div class="tutorial-next" id="tutorial-1-next"></div>
         <div class="tutorial-exit"></div>
       </div>
 
       <div id="tutorial-2">
+        <div class="tut-skip tut-skip-1"></div>
+        <div class="tut-skip tut-skip-2"></div>
+        <div class="tut-skip tut-skip-3"></div>
+        <div class="tut-skip tut-skip-4"></div>
+        <div class="tut-skip tut-skip-5"></div>
+        <div class="tut-skip tut-skip-6"></div>
+        <div class="tut-skip tut-skip-7"></div>
+        <div class="tut-skip tut-skip-8"></div>
+        <div class="tut-skip tut-skip-9"></div>
+        <div class="tut-skip tut-skip-10"></div>
+        <div class="tut-skip tut-skip-11"></div>
+        <div class="tut-skip tut-skip-12"></div>
         <div class="tutorial-next" id="tutorial-2-next"></div>
         <div class="tutorial-exit"></div>
       </div>
 
       <div id="tutorial-3">
+        <div class="tut-skip tut-skip-1"></div>
+        <div class="tut-skip tut-skip-2"></div>
+        <div class="tut-skip tut-skip-3"></div>
+        <div class="tut-skip tut-skip-4"></div>
+        <div class="tut-skip tut-skip-5"></div>
+        <div class="tut-skip tut-skip-6"></div>
+        <div class="tut-skip tut-skip-7"></div>
+        <div class="tut-skip tut-skip-8"></div>
+        <div class="tut-skip tut-skip-9"></div>
+        <div class="tut-skip tut-skip-10"></div>
+        <div class="tut-skip tut-skip-11"></div>
+        <div class="tut-skip tut-skip-12"></div>
         <div class="tutorial-next" id="tutorial-3-next"></div>
         <div class="tutorial-exit"></div>
       </div>
 
       <div id="tutorial-4">
+        <div class="tut-skip tut-skip-1"></div>
+        <div class="tut-skip tut-skip-2"></div>
+        <div class="tut-skip tut-skip-3"></div>
+        <div class="tut-skip tut-skip-4"></div>
+        <div class="tut-skip tut-skip-5"></div>
+        <div class="tut-skip tut-skip-6"></div>
+        <div class="tut-skip tut-skip-7"></div>
+        <div class="tut-skip tut-skip-8"></div>
+        <div class="tut-skip tut-skip-9"></div>
+        <div class="tut-skip tut-skip-10"></div>
+        <div class="tut-skip tut-skip-11"></div>
+        <div class="tut-skip tut-skip-12"></div>
         <div class="tutorial-next" id="tutorial-4-next"></div>
         <div class="tutorial-exit"></div>
       </div>
 
       <div id="tutorial-5">
+        <div class="tut-skip tut-skip-1"></div>
+        <div class="tut-skip tut-skip-2"></div>
+        <div class="tut-skip tut-skip-3"></div>
+        <div class="tut-skip tut-skip-4"></div>
+        <div class="tut-skip tut-skip-5"></div>
+        <div class="tut-skip tut-skip-6"></div>
+        <div class="tut-skip tut-skip-7"></div>
+        <div class="tut-skip tut-skip-8"></div>
+        <div class="tut-skip tut-skip-9"></div>
+        <div class="tut-skip tut-skip-10"></div>
+        <div class="tut-skip tut-skip-11"></div>
+        <div class="tut-skip tut-skip-12"></div>
         <div class="tutorial-next" id="tutorial-5-next"></div>
         <div class="tutorial-exit"></div>
       </div>
 
       <div id="tutorial-6">
+        <div class="tut-skip tut-skip-1"></div>
+        <div class="tut-skip tut-skip-2"></div>
+        <div class="tut-skip tut-skip-3"></div>
+        <div class="tut-skip tut-skip-4"></div>
+        <div class="tut-skip tut-skip-5"></div>
+        <div class="tut-skip tut-skip-6"></div>
+        <div class="tut-skip tut-skip-7"></div>
+        <div class="tut-skip tut-skip-8"></div>
+        <div class="tut-skip tut-skip-9"></div>
+        <div class="tut-skip tut-skip-10"></div>
+        <div class="tut-skip tut-skip-11"></div>
+        <div class="tut-skip tut-skip-12"></div>
         <div class="tutorial-next" id="tutorial-6-next"></div>
         <div class="tutorial-exit"></div>
       </div>
 
       <div id="tutorial-7">
+        <div class="tut-skip tut-skip-1"></div>
+        <div class="tut-skip tut-skip-2"></div>
+        <div class="tut-skip tut-skip-3"></div>
+        <div class="tut-skip tut-skip-4"></div>
+        <div class="tut-skip tut-skip-5"></div>
+        <div class="tut-skip tut-skip-6"></div>
+        <div class="tut-skip tut-skip-7"></div>
+        <div class="tut-skip tut-skip-8"></div>
+        <div class="tut-skip tut-skip-9"></div>
+        <div class="tut-skip tut-skip-10"></div>
+        <div class="tut-skip tut-skip-11"></div>
+        <div class="tut-skip tut-skip-12"></div>
         <div class="tutorial-next" id="tutorial-7-next"></div>
         <div class="tutorial-exit"></div>
       </div>
 
       <div id="tutorial-8">
+        <div class="tut-skip tut-skip-1"></div>
+        <div class="tut-skip tut-skip-2"></div>
+        <div class="tut-skip tut-skip-3"></div>
+        <div class="tut-skip tut-skip-4"></div>
+        <div class="tut-skip tut-skip-5"></div>
+        <div class="tut-skip tut-skip-6"></div>
+        <div class="tut-skip tut-skip-7"></div>
+        <div class="tut-skip tut-skip-8"></div>
+        <div class="tut-skip tut-skip-9"></div>
+        <div class="tut-skip tut-skip-10"></div>
+        <div class="tut-skip tut-skip-11"></div>
+        <div class="tut-skip tut-skip-12"></div>
         <div class="tutorial-next" id="tutorial-8-next"></div>
         <div class="tutorial-exit"></div>
       </div>
 
       <div id="tutorial-9">
+        <div class="tut-skip tut-skip-1"></div>
+        <div class="tut-skip tut-skip-2"></div>
+        <div class="tut-skip tut-skip-3"></div>
+        <div class="tut-skip tut-skip-4"></div>
+        <div class="tut-skip tut-skip-5"></div>
+        <div class="tut-skip tut-skip-6"></div>
+        <div class="tut-skip tut-skip-7"></div>
+        <div class="tut-skip tut-skip-8"></div>
+        <div class="tut-skip tut-skip-9"></div>
+        <div class="tut-skip tut-skip-10"></div>
+        <div class="tut-skip tut-skip-11"></div>
+        <div class="tut-skip tut-skip-12"></div>
         <div class="tutorial-next" id="tutorial-9-next"></div>
         <div class="tutorial-exit"></div>
       </div>
 
       <div id="tutorial-10">
+        <div class="tut-skip tut-skip-1"></div>
+        <div class="tut-skip tut-skip-2"></div>
+        <div class="tut-skip tut-skip-3"></div>
+        <div class="tut-skip tut-skip-4"></div>
+        <div class="tut-skip tut-skip-5"></div>
+        <div class="tut-skip tut-skip-6"></div>
+        <div class="tut-skip tut-skip-7"></div>
+        <div class="tut-skip tut-skip-8"></div>
+        <div class="tut-skip tut-skip-9"></div>
+        <div class="tut-skip tut-skip-10"></div>
+        <div class="tut-skip tut-skip-11"></div>
+        <div class="tut-skip tut-skip-12"></div>
         <div class="tutorial-next" id="tutorial-10-next"></div>
         <div class="tutorial-exit"></div>
       </div>
 
       <div id="tutorial-11">
+        <div class="tut-skip tut-skip-1"></div>
+        <div class="tut-skip tut-skip-2"></div>
+        <div class="tut-skip tut-skip-3"></div>
+        <div class="tut-skip tut-skip-4"></div>
+        <div class="tut-skip tut-skip-5"></div>
+        <div class="tut-skip tut-skip-6"></div>
+        <div class="tut-skip tut-skip-7"></div>
+        <div class="tut-skip tut-skip-8"></div>
+        <div class="tut-skip tut-skip-9"></div>
+        <div class="tut-skip tut-skip-10"></div>
+        <div class="tut-skip tut-skip-11"></div>
+        <div class="tut-skip tut-skip-12"></div>
         <div class="tutorial-next" id="tutorial-11-next"></div>
         <div class="tutorial-exit"></div>
       </div>
 
       <div id="tutorial-12">
+        <div class="tut-skip tut-skip-1"></div>
+        <div class="tut-skip tut-skip-2"></div>
+        <div class="tut-skip tut-skip-3"></div>
+        <div class="tut-skip tut-skip-4"></div>
+        <div class="tut-skip tut-skip-5"></div>
+        <div class="tut-skip tut-skip-6"></div>
+        <div class="tut-skip tut-skip-7"></div>
+        <div class="tut-skip tut-skip-8"></div>
+        <div class="tut-skip tut-skip-9"></div>
+        <div class="tut-skip tut-skip-10"></div>
+        <div class="tut-skip tut-skip-11"></div>
+        <div class="tut-skip tut-skip-12"></div>
         <div class="tutorial-next" id="tutorial-12-next"></div>
         <div class="tutorial-exit"></div>
       </div>
 
       <div id="tutorial-13">
+        <div class="tut-skip tut-skip-1"></div>
+        <div class="tut-skip tut-skip-2"></div>
+        <div class="tut-skip tut-skip-3"></div>
+        <div class="tut-skip tut-skip-4"></div>
+        <div class="tut-skip tut-skip-5"></div>
+        <div class="tut-skip tut-skip-6"></div>
+        <div class="tut-skip tut-skip-7"></div>
+        <div class="tut-skip tut-skip-8"></div>
+        <div class="tut-skip tut-skip-9"></div>
+        <div class="tut-skip tut-skip-10"></div>
+        <div class="tut-skip tut-skip-11"></div>
+        <div class="tut-skip tut-skip-12"></div>
         <div class="tutorial-exit"></div>
       </div>
 
