--- a/phase5/index.html
+++ b/phase5/index.html
@@ -28,6 +28,10 @@
         <div class="tut-skip tut-skip-10"></div>
         <div class="tut-skip tut-skip-11"></div>
         <div class="tut-skip tut-skip-12"></div>
+        <div id="tutorial-intro-app"></div>
+        <div id="tutorial-intro-input"></div>
+        <div id="tutorial-intro-reminders"></div>
+        <div id="tutorial-intro-progress"></div>
         <div class="tutorial-next" id="tutorial-1-next"></div>
         <div class="tutorial-exit"></div>
       </div>
@@ -232,6 +236,7 @@
         <div class="tut-skip tut-skip-10"></div>
         <div class="tut-skip tut-skip-11"></div>
         <div class="tut-skip tut-skip-12"></div>
+        <div id="tutorial-repeat"></div>
         <div class="tutorial-exit"></div>
       </div>
 
